--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
 	
+	<a href="https://github.com/jakiestfu/Behave.js"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+	
 	<div id="austin"></div>
 	
-	<header><a href="#">Behave.js</a></header>
+	<header><a href="https://github.com/jakiestfu/Behave.js">Behave.js</a></header>
 	<div id="content">
 		
 		<div class="inner">
@@ -113,7 +115,7 @@
 	</div>
 	
 	
-	<script type='text/javascript' src="src/behave.js"></script>
+	<script type='text/javascript' src="https://raw.github.com/jakiestfu/Behave.js/master/behave.js"></script>
 	<script type="text/javascript">
 	
 		function _val(id){
