--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	
-	<a href="https://github.com/jakiestfu/Behave.js"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+	<a href="https://github.com/jakiestfu/Behave.js"><img style="position: fixed; top: 0; right: 0; border: 0;" src="assets/fork.png" alt="Fork me on GitHub"></a>
 	
 	<div id="austin"></div>
 	
@@ -99,6 +99,10 @@
 				</div>
 				
 				<textarea id="demo" placeholder="Try writing a javascript function or some CSS"></textarea>
+			</div>
+			
+			<div>
+				<header><a href="https://github.com/jakiestfu/Behave.js">Download</a>
 			</div>
 			
 			<div class="small">
