--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			</div>
 			
 			<div>
-				<header><a href="https://github.com/jakiestfu/Behave.js">Download</a>
+				<footer><a href="https://github.com/jakiestfu/Behave.js">Download</a></footer>
 			</div>
 			
 			<div class="small">
