--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 	<div id="content">
 		
 		<div class="inner">
-			
+			<div class="share">
+				<iframe src="http://ghbtns.com/github-btn.html?user=jakiestfu&repo=Behave.js&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
+				<iframe src="http://ghbtns.com/github-btn.html?user=jakiestfu&repo=Behave.js&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
+								
+				<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			</div>
 			<div>
 				<h1>What?</h1>
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
