--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Coustard:400,900' rel='stylesheet' type='text/css'>
 	<link href='http://necolas.github.com/normalize.css/2.1.0/normalize.css' rel='stylesheet' type='text/css'>
 	<link href='assets/site.css' rel='stylesheet' type='text/css'>
+	<script src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js" type="text/javascript"></script>
 </head>
 <body>
 	
