--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						doDemo.call(null, true);
 					});
 				} else {
-					toListen[i].attachEventListener('onchange', function(){
+					toListen[i].attachEvent('onchange', function(){
 						doDemo.call(null, true);
 					});
 				}
