--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link href='http://necolas.github.com/normalize.css/2.1.0/normalize.css' rel='stylesheet' type='text/css'>
 	<link href='assets/site.css' rel='stylesheet' type='text/css'>
 	<script src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js" type="text/javascript"></script>
+
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="assets/fbimg.png">
 </head>
 <body>
 	
@@ -134,6 +137,7 @@
 		
 	</div>
 	
+	<img src="assets/fbimg.png" style="position:fixed;top:-999px;">
 	
 	<script type='text/javascript' src="https://raw.github.com/jakiestfu/Behave.js/master/behave.js"></script>
 	<script type="text/javascript">
