--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 	<link href='assets/site.css' rel='stylesheet' type='text/css'>
 	<script src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js" type="text/javascript"></script>
 
-	<meta property="og:type" content="website">
-	<meta property="og:image" content="assets/fbimg.png">
+	<meta property="og:title" content="Behave.js"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://github.com/jakiestfu/Behave.js"/>
+    <meta property="og:image" content="https://raw.github.com/jakiestfu/Behave.js/gh-pages/assets/fbimg.png">
+    <meta property="og:site_name" content="Behave.js"/>
+    <meta property="og:description" content="Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in."/>
 </head>
 <body>
 	
