--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<meta property="og:title" content="Behave.js"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://github.com/jakiestfu/Behave.js"/>
+    <meta property="og:url" content="http://jakiestfu.github.com/Behave.js/"/>
     <meta property="og:image" content="https://raw.github.com/jakiestfu/Behave.js/gh-pages/assets/fbimg.png">
     <meta property="og:site_name" content="Behave.js"/>
     <meta property="og:description" content="Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in."/>
