Added Google Anal

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <meta property="og:image" content="https://raw.github.com/jakiestfu/Behave.js/gh-pages/assets/fbimg.png">
     <meta property="og:site_name" content="Behave.js"/>
     <meta property="og:description" content="Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in."/>
+
+    <script type="text/javascript">
+	    var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-37970328-1']);
+		_gaq.push(['_trackPageview']);
+		
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
+	
 </head>
 <body>
 	
