--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			
 			<div>
 				<h1>Defaults &amp Options</h1>
-				<pre><code>var editor = Behave({
+				<pre><code>var editor = new Behave({
     textarea: null,
     replaceTab: true,
     softTabs: true,
