--- a/index.html
+++ b/index.html
@@ -77,7 +77,14 @@
 					<dd><p>Textarea element to apply the behaviors to</p></dd>
 				
 					<dt><span>replaceTab</span></dt>
-					<dd><p>Pressing the tab key will insert a tab instead of cycle input focus. If you are holding shift, and there is a full tab before your cursor (whatever your tab may be), it will unindent.</p></dd>
+					<dd>
+						<p>replaceTab, if set to true, does three different things:</p>
+						<ul>
+							<li>Pressing the tab key will insert a tab instead of cycle input focus.</li>
+							<li>If you are holding shift, and there is a full tab before your cursor (whatever your tab may be), it will unindent.</li>
+							<li>If you have a range selected, both of the above rules will apply to all lines selected (multi-line indent/unindent)</li>
+						</ul>
+					</dd>
 				
 					<dt><span>softTabs</span></dt>
 					<dd><p>If set to true, spaces will be used instead of a tab character</p></dd>
