--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 			<div>
 				<h1>What?</h1>
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
+				<ul>
+					<li>Hard and Soft Tabs</li>
+					<li>Auto Open/Close Paranthesis, Brackets, Braces, Double and Single Quotes</li>
+					<li>Auto delete a paired character</li>
+					<li>Overwrite a paired character</li>
+					<li>Multi-line Indentation/Unindentation</li>
+					<li>Automatic Indentation</li>
+				</ul>
 			</div>
 			
 			<div>
