Fixed secwet image

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		
 	</div>
 	
-	<img src="assets/fbimg.png" style="position:fixed;top:-999px;">
+	<img src="assets/fbimg.png" style="position:fixed;top:-9999px;left:-9999px;">
 	
 	<script type='text/javascript' src="https://raw.github.com/jakiestfu/Behave.js/master/behave.js"></script>
 	<script type="text/javascript">
