--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 				<iframe src="http://ghbtns.com/github-btn.html?user=jakiestfu&repo=Behave.js&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
 				<iframe src="http://ghbtns.com/github-btn.html?user=jakiestfu&repo=Behave.js&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
 								
-				<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+				<a href="https://twitter.com/share" class="twitter-share-button" data-via="jakiestfu">Tweet</a>
+				<a href="https://twitter.com/jakiestfu" class="twitter-follow-button" data-show-count="false">Follow @jakiestfu</a>
+				
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
 			<div>
 				<h1>What?</h1>
