--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				<h1>What?</h1>
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
 				<ul>
+					<li>No Dependencies</li>
 					<li>Hard and Soft Tabs</li>
 					<li>Auto Open/Close Paranthesis, Brackets, Braces, Double and Single Quotes</li>
 					<li>Auto delete a paired character</li>
