--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 				
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
+			<div><a href="https://github.com/jakiestfu/Behave.js/issues/6"><strong><em>There is only one issue to resolve to add support for IE 7 and 8, read about it here and see if you can help!</em></strong></a></div>
 			<div>
 				<h1>What?</h1>
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
