Changed softTabSize to tabSize, works for hard and soft tabs

--- a/example.html
+++ b/example.html
@@ -40,7 +40,7 @@
 				textarea: 		document.getElementById('demo'),
 				replaceTab: 	true,
 			    softTabs: 		true,
-			    softTabSize: 	4,
+			    tabSize: 		4,
 			    autoOpen: 		true,
 			    overwrite: 		true,
 			    autoStrip: 		true,
