--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ No behaviors if typed here</code></pre>
 				<div class="opts">
 					<label>Replace Tab: <input type="checkbox" checked="checked" id="replaceTab"></label>
 					<label>Soft Tabs: <input type="checkbox" checked="checked" id="softTabs"></label>
-					<label>Soft Tab Size: <input type="text" id="softTabSize" value="4" class="text"></label>
+					<label>Tab Size: <input type="text" id="tabSize" value="4" class="text"></label>
 					<label>Auto Open: <input type="checkbox" checked="checked" id="autoOpen"></label>
 					<label>Overwrite: <input type="checkbox" checked="checked" id="overwrite"></label>
 					<label>Auto Strip: <input type="checkbox" checked="checked" id="autoStrip"></label>
@@ -211,7 +211,7 @@ No behaviors if typed here</code></pre>
 				textarea: document.getElementById('demo'),
 				replaceTab: 	_val('replaceTab'),
 			    softTabs: 		_val('softTabs'),
-			    tabSize: 		parseInt( _val('softTabSize') ),
+			    tabSize: 		parseInt( _val('tabSize') ),
 			    autoOpen: 		_val('autoOpen'),
 			    overwrite: 		_val('overwrite'),
 			    autoStrip: 		_val('autoStrip'),
