--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 				
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
-			<div><a href="https://github.com/jakiestfu/Behave.js/issues/6" target="_blank" class="plea"><strong><em>There is only one issue to resolve to add support for IE 7 and 8, read about it here and see if you can help!</em></strong></a></div>
+			
 			<div>
 				<h1>What?</h1>
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
 				
 				<ul>
+					<li>Supports IE7+ (Holla holla)</li>
 					<li>No Dependencies</li>
 					<li>Custom Code/Behavior Fencing</li>
 					<li>Hard and Soft Tabs</li>
@@ -62,7 +63,7 @@
 					<li>Overwrite a paired character</li>
 					<li>Multi-line Indentation/Unindentation</li>
 					<li>Automatic Indentation</li>
-					<li>Chrome X+, Firefox X+, Safari X+, IE9+</li>
+					<li>Chrome X+, Firefox X+, Safari X+, IE7+</li>
 				</ul>
 			</div>
 			
