--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
 				
 				<ul>
-					<li>Supports IE7+ (Holla holla)</li>
+					<li><a href="http://www.youtube.com/watch?v=F1lJFlB-89Q" target="_blank">Supports IE7+ (Does that make you randy?)</a></li>
 					<li>No Dependencies</li>
 					<li>Custom Code/Behavior Fencing</li>
 					<li>Hard and Soft Tabs</li>
