--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ No behaviors if typed here</code></pre>
 	<script type="text/javascript">
 	
 		function _val(id){
-			if(id=="softTabSize"){
+			if(id=="tabSize"){
 				return document.getElementById(id).value;
 			} else if(id=="fence"){
 				return document.getElementById(id).value.length > 0 ? document.getElementById(id).value : false;
