Fixed mime type issue

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ No behaviors if typed here</code></pre>
 	
 	<img src="assets/fbimg.png" style="position:fixed;top:-9999px;left:-9999px;">
 	
-	<script type='text/javascript' src="https://raw.github.com/jakiestfu/Behave.js/master/behave.js"></script>
+	<script type='text/javascript' src="behave.js"></script>
 	<script type="text/javascript">
 	
 		function _val(id){
