--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<li>Overwrite a paired character</li>
 					<li>Multi-line Indentation/Unindentation</li>
 					<li>Automatic Indentation</li>
-					<li>Chrome X+, Firefox X+, Safari X+, IE7+</li>
+					<li>Chrome X+, Firefox 8+, Safari X+, IE7+</li>
 				</ul>
 			</div>
 			
