More Browsah Testing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
 				
 				<ul>
-					<li><a href="http://www.youtube.com/watch?v=F1lJFlB-89Q" target="_blank">Supports IE7+ (Does that make you randy?)</a></li>
+					<li>Supports <a href="http://www.youtube.com/watch?v=F1lJFlB-89Q" target="_blank">Partial IE6, IE7+, Firefox 8+, Safari 4+, Chrome X+, Opera 12</a></li>
 					<li>No Dependencies</li>
 					<li>Custom Code/Behavior Fencing</li>
 					<li>Hard and Soft Tabs</li>
@@ -63,7 +63,6 @@
 					<li>Overwrite a paired character</li>
 					<li>Multi-line Indentation/Unindentation</li>
 					<li>Automatic Indentation</li>
-					<li>Chrome X+, Firefox 8+, Safari X+, IE7+</li>
 				</ul>
 			</div>
 			
