--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div>
 				<h1>What?</h1>
 				<p>Behave.js is a lightweight library for adding IDE style behaviors to plain text areas, making it much more enjoyable to write code in.</p>
-				
+				<img src="http://i.imgur.com/cAwUx9v.gif" class="gif">
 				<ul>
 					<li>Supports <a href="http://www.youtube.com/watch?v=F1lJFlB-89Q" target="_blank">Partial IE6, IE7+, Firefox 8+, Safari 4+, Chrome X+, Opera 12</a></li>
 					<li>No Dependencies</li>
