--- a/examples/example-generic.html
+++ b/examples/example-generic.html
@@ -30,7 +30,7 @@
 	
 	<textarea id="demo"></textarea>
 	
-	<script type='text/javascript' src="behave.js"></script>
+	<script type='text/javascript' src="../behave.js"></script>
 	<script type="text/javascript">
 	
 		window.onload = function(){
